fix(FEV-1296): fixed issue with dual screen plugin overlap

--- a/src/styles/_styles.scss
+++ b/src/styles/_styles.scss
@@ -25,3 +25,12 @@
     }
   }
 }
+
+:global(.playkit-player) {
+  :global(.playkit-player .playkit-top-bar .playkit-right-controls) {
+    display: flex;
+  }
+  :global(.playkit-slideIn) {
+    z-index: 1;
+  }
+}
